--- a/404.md
+++ b/404.md
@@ -1,7 +1,7 @@
 ---
-layout: default
+layout: site
 ---
-
+Erreur 404, la page que vous recherchez n'existe pas
 <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
