--- a/404.md
+++ b/404.md
@@ -1,25 +1,12 @@
 ---
 layout: site
+title: erreur 404
 ---
-Erreur 404, la page que vous recherchez n'existe pas
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>ERREUR 404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Page non trouvée :(</strong></p>
+  <p>La page demandée n'a pu être trouvée.</p>
+  <a href="/">Retour à la page d'accueil</a>
 </div>
