--- a/404.md
+++ b/404.md
@@ -1,12 +1,12 @@
 ---
 layout: site
 title: erreur 404
+header_img: error404
 ---
 
-<div class="container">
+<div class="page-header">
   <h1>ERREUR 404</h1>
-
-  <p><strong>Page non trouvée :(</strong></p>
-  <p>La page demandée n'a pu être trouvée.</p>
-  <a href="/">Retour à la page d'accueil</a>
 </div>
+<p><strong>Page non trouvée :(</strong></p>
+<p>La page demandée n'a pu être trouvée.</p>
+<a href="/">Retour à la page d'accueil</a>
