debug (site) : correction erreur 404 + feed.xml

--- a/404.md
+++ b/404.md
@@ -1,12 +1,9 @@
 ---
-layout: site
+layout: default
 title: erreur 404
 header_img: error404
+permalink: /404.html
 ---
-
-<div class="page-header">
-  <h1>ERREUR 404</h1>
-</div>
 <p><strong>Page non trouvée :(</strong></p>
 <p>La page demandée n'a pu être trouvée.</p>
 <a href="/">Retour à la page d'accueil</a>
