feature (site): ajout variable auteur.nom

--- a/_posts/2004-07-20-l-esclave.md
+++ b/_posts/2004-07-20-l-esclave.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: L'esclave
-auteur: Candle
+auteur:
+  nom: Candle
 metatags:
   description: "histoire de Candle se titulant L'esclave"
   keywords: récits gais, bondage, jeu scato, jeu uro, autoritaire, domination, rasage
